v0.4.0-beta2
============
Date: 2012-10-17
Packaged from revision 7b8cafbde7b14afc8e85235e9b087889a6bfa86e.

  FIXED: Release doesn't include rst files.


v0.4.0-beta1
============
Date: 2012-10-17
Packaged from revision 09a0c4434a676c6fd753e6dcde95056c424db62e.

CHANGED: Refactored documentation using sphinx.
         (resolves issue 81)

  FIXED: Setting MODELTRANSLATION_TRANSLATION_FILES should be optional.
         (resolves issue 86)


v0.4.0-alpha1
=============
Date: 2012-10-12
Packaged from revision 170.

  ADDED: Support for FileField and ImageField.
         (thanks to Bruno Tavares,
          resolves issue 30)
  ADDED: New management command sync_database_fields to sync the database after
         a new model has been registered or a new language has been added.
         (thanks to Sébastien Fievet and the authors of django-transmeta,
          resolves issue 62)

CHANGED: Excluded tabular inlines from jQuery tabs, as they are currently
         not supported.
CHANGED: Use app-level translation files in favour of a single project-level
         one. Adds an autoregister feature similiar to the one provided by
         Django's admin. A new setting MODELTRANSLATION_TRANSLATION_FILES keeps
         backwards compatibility with older versions. See documentation for
         details. This is basically a merge from both
         django-modeltranslation-wrapper and hyperweek's branch at github.
         (thanks to Jacek Tomaszewski, Sébastien Fievet and Maxime Haineault,
          resolves issues 19, 58 and 71)
CHANGED: Moved tests to separate folder and added tests for TranslationAdmin.
         To run the tests the settings provided in model.tests.modeltranslation
         have to be used (settings.LANGUAGES override doesn't work for
         TranslationAdmin).
CHANGED: Major refactoring of the admin integration. Subclassed BaseModelAdmin
         and InlineModelAdmin. Patching options in init doesn't seem to be