@@ -1,3 +1,9 @@
+CHANGED: Modeltranslation related css class prefix to 'mt'.
+
+  FIXED: Tabs don't properly support two-part language codes.
+         (resolves issue 63)
+
+
 v0.4.0-beta2
 ============
 Date: 2012-10-17
